# pyproject.toml
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "arrive"
version = "0.1.0"
description = "A dynamical systems engine for GIS."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Moira", email = "moira@arrivegis.com" }]
keywords = ["cellular automata", "geospatial"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  # "pydantic>=2",  # add runtime deps here
]

[project.urls]
Homepage = "https://github.com/arrive-gis/arrive"
Issues = "https://github.com/arrive-gis/arrive/issues"

# Optional: expose a CLI command `mypkg` -> mypackage.cli:app
[project.scripts]
mypkg = "arrive.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-select = ["I"]  # import sort
exclude = ["docs"]

[tool.ruff.lint.isort]
known-first-party = ["mypackage"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/mypackage"]
